# django-react-boilerplate

./: .gitignore  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: django.yml  nodejs.yml
backend/: settings.py  urls.py  views.py
public/: index.html
