[tool.poetry]
name = "django-react-boilerplate"
version = "0.0.1"
description = "A boilerplate which integrates Django with React.js front-end"
authors = ["Shakib Hossain <shakib609@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1"
djangorestframework = "^3.12"
whitenoise = "^5.2"
django-heroku = "^0.3.1"
gunicorn = "^20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
